<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="loginN">login name</string>
    <string name="rb">RadioButton</string>
    <string name="check">CheckBox</string>
    <string name="swit">What does this do?</string>
    <string name="dialog_message">Do you want to end the activity?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="startChat">Start Chat</string>
    <string name="reminder">message...</string>
    <string name="sendMessage">Send</string>
    <string name="newTextHint">New Text</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="dialog_title">This is a dialog title</string>
</resources>
