<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_height="wrap_content">


    <RadioButton
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/rb"
        />

    <CheckBox
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/check"
        android:id="@+id/checkbox"
        />

    <Switch
        android:id="@+id/swit"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/swit"
        android:checked="false"
        />





    <ImageButton
        android:id="@+id/imageButt"
        android:contentDescription="Image 1"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        />

</GridLayout>
